# Dine

./: .gitignore  pyproject.toml
client/dine/: pubspec.yaml
client/dine/android/app/: build.gradle
client/dine/android/app/src/main/: AndroidManifest.xml
client/dine/android/app/src/main/kotlin/com/example/dine/: MainActivity.kt
client/dine/ios/Runner/: Info.plist
client/dine/ios/Runner.xcodeproj/: project.pbxproj
client/dine/lib/: main.dart
client/dine/linux/: CMakeLists.txt  my_application.cc
client/dine/macos/Runner.xcodeproj/: project.pbxproj
client/dine/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/dine/macos/Runner/Configs/: AppInfo.xcconfig
client/dine/web/: index.html
client/dine/windows/: CMakeLists.txt
client/dine/windows/runner/: Runner.rc
server/: main.py
